<resources>

    <string name="app_name">Veez</string>
    <string name="new_list">New List</string>
    <string name="you">You</string>
    <string name="date">25/05/2015</string>
    <string name="private_list">" Private"</string>
    <string name="public_list">" Public"</string>
    <string name="explorer">Explorer</string>
    <string name="hash_tag">hash_tag</string>
    <string name="zero">0</string>
    <string name="slash">/</string>
    <string name="list_name">List Name</string>
    <string name="item_name">" item name"</string>
    <string name="only_you">Only you</string>
    <string name="number_days">12 Days</string>
    <string name="action_settings">Setting</string>
    <string name="item">Item:</string>
    <string name="info">Info:</string>
    <string name="facebook_app_id">837568299669031</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="new_info">New Info:</string>
    <string name="my_lists_menu">My Lists</string>
    <string name="explorer_menu">Explorer</string>
    <string name="friends_menu">Friends</string>

    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="settings">Settings</string>
    <string name="myaccount">My Account</string>
    <string name="stats">Stats</string>
    <string name="search">Search</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>

</resources>
