<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ListInfo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListInfoActivity"
    android:orientation="vertical"
    android:background="#ffffff"
    android:weightSum="44" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/cover"
        android:layout_weight="10" >

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/b_first_menu"
            android:background="@drawable/menu"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:onClick="onClick"/>

        <Button
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:id="@+id/b_add_image"
            android:background="@drawable/add_image"
            android:onClick="onClick"
            android:layout_alignTop="@+id/b_first_menu"
            android:layout_centerHorizontal="true"/>

        <Button
            android:layout_width="25dp"
            android:layout_height="50dp"
            android:id="@+id/b_second_menu"
            android:background="@drawable/menu_list"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="onClick" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_list_name"
            android:fontFamily="Myriad Hebrew"
            android:textSize="30sp"
            android:text="@string/list_name"
            android:singleLine="false"
            android:textStyle="bold"
            android:layout_below="@+id/b_add_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:background="@drawable/lines"
        android:layout_weight="4"
        android:weightSum="7">

        <HorizontalScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/sv_friends"
            android:layout_weight="6" >

        </HorizontalScrollView>

        <Button
            android:id="@+id/b_add_friend"
            android:layout_width="60dp"
            android:layout_height="fill_parent"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/add"
            android:layout_weight="1"
            android:gravity="end"
            android:onClick="onClick" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@drawable/line"
        android:gravity="center_vertical"
        android:layout_weight="6"
        android:weightSum="3">

        <ImageView
            android:layout_width="55dp"
            android:layout_height="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="3dp"
            android:src="@drawable/tags"
            android:layout_weight="1" />

        <Button
            android:id="@+id/b_add_tag"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginStart="3dp"
            android:background="@drawable/add_small"
            android:layout_weight="2"
            android:onClick="onClick" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@drawable/line"
        android:gravity="center_vertical"
        android:layout_weight="5"
        android:weightSum="3">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_marginLeft="17dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="3dp"
            android:src="@drawable/manager"
            android:layout_weight="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_manager"
            android:layout_marginLeft="17dp"
            android:layout_marginStart="17dp"
            android:text="@string/you"
            android:textColor="#505153"
            android:textSize="22sp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@drawable/line"
        android:gravity="center_vertical"
        android:layout_weight="5"
        android:weightSum="3">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_marginLeft="17dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="3dp"
            android:src="@drawable/deadline"
            android:layout_weight="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_deadline"
            android:layout_marginLeft="17dp"
            android:layout_marginStart="17dp"
            android:text="@string/date"
            android:textColor="#505153"
            android:textSize="22sp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:background="@drawable/line"
        android:layout_weight="6">

        <ImageView
            android:layout_width="110dp"
            android:layout_height="25dp"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/privacy"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center" >

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/private_list"
                android:button="@drawable/check_box_privacy_design"
                android:textColor="#505153"
                android:textSize="25sp"
                android:id="@+id/cb_private"
                android:layout_marginRight="6dp"
                android:layout_marginEnd="6dp"                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/public_list"
                android:button="@drawable/check_box_privacy_design"
                android:textColor="#505153"
                android:textSize="25sp"
                android:id="@+id/cb_public"
                android:layout_marginLeft="6dp"
                android:layout_marginStart="6dp"                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/line"
        android:layout_weight="3">
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/b_leave_list"
        android:background="@drawable/leave_list"
        android:layout_weight="4"
        android:onClick="onClick" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#ffffff">
    </LinearLayout>

</LinearLayout>